2000-06-27  Andreas Jaeger  <aj@suse.de>

	* locales/ja_JP: Add missing / in LC_CTYPE.

2000-06-26  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (distribute): Add tst-ctype-de_DE.in.
	* tst-ctype.c: Read in more tests from stdin.
	* tst-ctype.sh: Feed extra test data to program via stdin.
	* tst-ctype-de_DE.in: New file.

	* locales/i18n (punct): Exclude U00A0.
	(blank): Include U00A0.

	* locales/ja_JP: Updates for new format.

	* Makefile (test-srcs): Add tst-ctype.
	(distribute): Add tst-ctype.sh.
	(do-tst-ctype): New target.  Run for tests.
	* tst-ctype.c: New file.
	* tst-ctype.sh: New file.

	* locales/i18n: NUL character must not be in cntrl.

	* Makefile (test-input): Add en_US.ISO-8859-1.
	* en_US.in: New file.

2000-06-25  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (test-input): Remove everything but de_DE.ISO-8859-1
	for now.

	* de_DE.in: Update for new sorting.

	* tst-locale.sh: Don't use mnemonic.ds.
	* tst-mbswcs.sh: Likewise.
	* tst-trans.sh: Likewise.

	* locales/de_DE: Update for new format.
	* locales/en_US: Likewise.
	* tests/trans.def: Likewise.
	* tst-fmon-locales/tstfmon_n01y12: Likewise.
	* tst-fmon-locales/tstfmon_n02n40: Likewise.
	* tst-fmon-locales/tstfmon_n10y31: Likewise.
	* tst-fmon-locales/tstfmon_n11y41: Likewise.
	* tst-fmon-locales/tstfmon_n12y11: Likewise.
	* tst-fmon-locales/tstfmon_n20n32: Likewise.
	* tst-fmon-locales/tstfmon_n30y20: Likewise.
	* tst-fmon-locales/tstfmon_n41n00: Likewise.
	* tst-fmon-locales/tstfmon_y01y10: Likewise.
	* tst-fmon-locales/tstfmon_y02n22: Likewise.
	* tst-fmon-locales/tstfmon_y22n42: Likewise.
	* tst-fmon-locales/tstfmon_y30y21: Likewise.
	* tst-fmon-locales/tstfmon_y32n31: Likewise.
	* tst-fmon-locales/tstfmon_y40y00: Likewise.
	* tst-fmon-locales/tstfmon_y42n21: Likewise.

	* tst-rpmatch.c: Avoid warning with broken compiler.

	* locales/i18n: Take CJK ideographs and Hangul out of `alpha' table.

	* sort-test.sh: Add more GCONV_PATH usages.
	* tst-fmon.sh: Likewise.