@@ -1,5 +1,9 @@
 2000-06-27  Andreas Jaeger  <aj@suse.de>
 
+	* Makefile (tests): Add tests from tests-mbwc subdirectory,
+	comment them out for now.
+	(subdir-dirs): New for tests-mbwc, add also vpaths.
+
 	* locales/ja_JP: Add missing / in LC_CTYPE.
 
 2000-06-26  Ulrich Drepper  <drepper@redhat.com>
